<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/rounded_green_background"
    android:gravity="center_vertical">


    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:src="@drawable/volume_icon"
        android:contentDescription="@string/icon" />

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/volume_adjustment"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"/>

    <SeekBar
        android:id="@+id/volumeSeekBar"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@drawable/seekbar_thumb"
        android:max="100"
        android:progress="50" />



    <!-- Horizontal layout for the two ImageButtons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/save"
            android:contentDescription="@string/save"
            android:layout_marginEnd="20dp"
            />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/close"
            android:contentDescription="@string/close"/>

    </LinearLayout>

</LinearLayout>
